--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/expect-puppeteer": "^4.4.5",
     "@types/jest": "^24.0.0",
+    "@types/jest-environment-puppeteer": "^4.4.0",
     "@types/node": "^12.0.0",
+    "@types/puppeteer": "^5.4.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
@@ -53,5 +56,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "faker": "^5.1.0",
+    "puppeteer": "^5.4.1"
   }
 }
